--- a/styles.css
+++ b/styles.css
@@ -57,16 +57,8 @@
   transform: translateY(-100%);
 }
 
-#Accueil {
-  color: #4a55bf;
-}
-#apropos {
-  color: #c44b4b;
-}
-
 .burger {
   display: none;
-  background-color: red;
 }
 
 .landing {
@@ -152,14 +144,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-
   box-shadow: 1px 1px 12px rgb(0, 0, 0, 0.2);
   border-radius: 20px;
   margin: 20px;
   padding: 10px;
   text-align: center;
 }
-
+img {
+  height: 253px;
+  width: ;
+}
 .presentation-container img,
 p,
 h2 {
@@ -181,36 +175,26 @@ img {
 .info {
   list-style-position: inside;
 }
+.liberty-section {
+}
 .liberty-container {
   display: flex;
-  justify-content: stretch;
   margin: 10px;
+  width: 40%;
+  list-style-position: inside;
 }
-.effect::before {
-  content: "la liberté suivante";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #ffffffdf;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  left: -100%;
-  transition: left 0.4s;
-  font-size: 25px;
-  font-weight: 500;
-}
-.effect::hover::before {
-  left: 0;
-}
+
 .liberty {
   box-shadow: 1px 1px 12px rgba(255, 41, 3, 0.466);
   border-radius: 20px;
   margin: 20px;
-  padding: 10px;
-  text-align: center;
+  padding: 25px;
 }
 
+li {
+  margin-top: 10px;
+  cursor: pointer;
+}
 .footer {
   min-height: 100px;
   display: flex;
