--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,8 @@
 }
 .info {
   margin-left: 3%;
-  font-size: 20px;
+  font-size: 25px;
+  padding-top: 10px;
 }
 .item1 {
   display: flex;
@@ -310,8 +311,24 @@ li {
     font-size: 30px;
   }
 }
-
+.taille {
+  display: none;
+  text-align: center;
+  font-size: 40px;
+}
+.reco {
+  font-size: 20px;
+}
 @media (max-width: 550px) {
+  .taille {
+    display: block;
+  }
+  .liberty-section,
+  .introduction,
+  .home-container {
+    display: none;
+  }
+
   .logo {
     width: 100px;
   }
