--- a/styles.css
+++ b/styles.css
@@ -320,7 +320,9 @@ li {
   font-size: 20px;
 }
 @media (max-width: 550px) {
-  
+   .taille {
+    display: block;
+  }
   .liberty-section,
   .introduction,
   .home-container {
